# Process this file with autoconf to produce a configure script.

AC_INIT(stunnel.c)
AC_CONFIG_HEADER(config.h)

AC_CANONICAL_HOST
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

VERSION="3.0"
AC_SUBST(VERSION)
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")

AC_MSG_CHECKING([for SSL directory])
SSLDIR="/usr/local/ssl"
test -f $SSLDIR/include/ssl.h || SSLDIR="/usr/lib/ssl"
test -f $SSLDIR/include/ssl.h || SSLDIR="/usr"
AC_MSG_RESULT($SSLDIR)
AC_SUBST(SSLDIR)
AC_DEFINE_UNQUOTED(SSLDIR, "$SSLDIR")

AC_SUBST(host)
AC_DEFINE_UNQUOTED(HOST, "$host")

dnl Checks for libraries.
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(socket, socket)
AC_CHECK_LIB(pthread, pthread_create)
# AC_CHECK_LIB(wrap, hosts_access)
AC_MSG_CHECKING([for hosts_access in -lwrap])
saved_LIBS="$LIBS"
LIBS="$saved_LIBS -lwrap"
AC_TRY_LINK([int hosts_access(); int allow_severity, deny_severity;],
[hosts_access()],
[AC_MSG_RESULT(yes); AC_DEFINE(HAVE_LIBWRAP)],
[AC_MSG_RESULT(no)]; LIBS="$saved_LIBS")

dnl Checks for header files.
# AC_HEADER_DIRENT
# AC_HEADER_STDC
# AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(getopt.h strings.h unistd.h sys/select.h tcpd.h pthread.h)

# dnl Checks for typedefs, structures, and compiler characteristics.
# AC_C_CONST
# AC_TYPE_SIGNAL
# AC_TYPE_SIZE_T
# AC_TYPE_PID_T
# AC_HEADER_TIME

# dnl Checks for library functions.
# AC_CHECK_FUNCS(select strerror)

AC_OUTPUT(Makefile)

